--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,7 @@ img {
 }
 
 .futures-list-item {
-    width: 264px;
+    width: calc((100%-72px)/4);
 }
 
 .visually-hidden {
@@ -267,8 +267,27 @@ img {
     color: #2e2f42;
 }
 
+.team-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
 .team-list-item {
-    background-color: #FFFFFF;
+    border-radius: 0px 0px 4px 4px;
+    background: var(--WHITE, #FFF);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: calc((100% - 72px) / 4);
+}
+
+
+.team-list-conteiner {
+    padding-bottom: 32px;
+    margin-top: 32px;
 }
 
 .team-list-item-name {
@@ -291,8 +310,21 @@ img {
     line-height: 1.5;
     /* 150% */
     letter-spacing: 0.32px;
+    margin-top: 8px;
 }
 
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    justify-content: center;
+    row-gap: 48px;
+    margin-top: 72px;
+}
+
+.portfolio-list-item {
+    width: calc((100% - 48px) / 3);
+}
 
 .portfolio-heading {
     color: var(--NAVY-BLUE, #2E2F42);
@@ -305,6 +337,12 @@ img {
     /* 111.111% */
     letter-spacing: 0.72px;
     text-transform: capitalize;
+}
+
+.portfolio-wrapper {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio-list-item-name {
@@ -327,6 +365,7 @@ img {
     line-height: 1.5;
     /* 150% */
     letter-spacing: 0.32px;
+    margin-top: 8px;
 }
 
 .logo-futer {
@@ -341,19 +380,26 @@ img {
     /* 116.667% */
     letter-spacing: 0.54px;
     text-transform: uppercase;
+
 }
 
 .footer {
-    background: var(--NAVY-BLUE, #2E2F42);
+
+    background-color: #2E2F42;
+    padding: 100px 0;
+
 }
 
 .footer-text {
-    color: var(--CLOUD, #F4F4FD);
     font-family: "Roboto", sans-serif;
+    color: #F4F4FD;
     font-size: 16px;
     line-height: 1.5;
-    /* 150% */
-    letter-spacing: 0.32px;
+    text-transform: none;
+    letter-spacing: 0.02em;
+    box-sizing: border-box;
+    max-width: 264px;
+    margin-top: 16px;
 }
 
 .logo-second {
