--- a/css/styles.css
+++ b/css/styles.css
@@ -62,12 +62,14 @@ img {
     display: inline-flex;
     align-items: flex-start;
     gap: 40px;
+    padding: 24px 0;
 }
 
 .navigation {
     margin-right: 332px;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 /* logo */
@@ -154,14 +156,11 @@ img {
 }
 
 /* main */
-.intro .container {
-    padding-top: 188px;
-    padding-bottom: 188px;
-}
+.intro .container {}
 
 .intro {
     background-color: var(--NAVY-BLUE, #2E2F42);
-
+    padding: 188px 0;
 }
 
 .intro-heading {
@@ -175,6 +174,9 @@ img {
     /* 107.143% */
     letter-spacing: 1.12px;
     margin-bottom: 48px;
+    max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .button-order {
@@ -195,8 +197,7 @@ img {
     border-radius: 4px;
     margin-right: auto;
     margin-left: auto;
-
-
+    min-width: 169px
 }
 
 .button-order:hover,
@@ -265,6 +266,8 @@ img {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
+    margin-bottom: 72px;
+
 }
 
 .team-list {
@@ -286,8 +289,8 @@ img {
 
 
 .team-list-conteiner {
-    padding-bottom: 32px;
-    margin-top: 32px;
+    padding: 32px 0;
+
 }
 
 .team-list-item-name {
@@ -300,6 +303,8 @@ img {
     line-height: 1.2;
     /* 120% */
     letter-spacing: 0.4px;
+    margin-bottom: 8px;
+    text-align: center;
 }
 
 .team-list-item-bio {
@@ -310,7 +315,7 @@ img {
     line-height: 1.5;
     /* 150% */
     letter-spacing: 0.32px;
-    margin-top: 8px;
+    text-align: center;
 }
 
 .portfolio-list {
@@ -319,7 +324,7 @@ img {
     column-gap: 24px;
     justify-content: center;
     row-gap: 48px;
-    margin-top: 72px;
+
 }
 
 .portfolio-list-item {
@@ -337,6 +342,7 @@ img {
     /* 111.111% */
     letter-spacing: 0.72px;
     text-transform: capitalize;
+    margin-bottom: 72px;
 }
 
 .portfolio-wrapper {
@@ -380,7 +386,8 @@ img {
     /* 116.667% */
     letter-spacing: 0.54px;
     text-transform: uppercase;
-
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer {
@@ -399,7 +406,7 @@ img {
     letter-spacing: 0.02em;
     box-sizing: border-box;
     max-width: 264px;
-    margin-top: 16px;
+
 }
 
 .logo-second {
