--- a/css/styles.css
+++ b/css/styles.css
@@ -54,8 +54,6 @@ img {
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 .menu {
@@ -361,6 +359,7 @@ img {
     line-height: 1.2;
     /* 120% */
     letter-spacing: 0.4px;
+    margin-bottom: 8px;
 }
 
 .portfolio-list-item-info {
@@ -371,7 +370,7 @@ img {
     line-height: 1.5;
     /* 150% */
     letter-spacing: 0.32px;
-    margin-top: 8px;
+
 }
 
 .logo-futer {
