--- a/css/styles.css
+++ b/css/styles.css
@@ -91,9 +91,9 @@ img {
 
 }
 
-.menu-item {
+/* .menu-item {
     padding: 24px 0;
-}
+} */
 
 /* menu */
 .menu-item-link {
@@ -106,6 +106,7 @@ img {
     line-height: 1.5;
     /* 150% */
     letter-spacing: 0.32px;
+    padding: 24px 0;
 
 }
 
